k8s/deployment-extrasistemodoo.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '8'
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"extrasistemodoo:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"extrasistemodoo\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  resourceVersion: '56300558'
  name: extrasistemodoo
  uid: c0b1a1c9-1657-4d05-ac22-77cf0f883e2b
  creationTimestamp: '2025-01-15T19:50:23Z'
  generation: 12
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: apps/v1
      time: '2025-01-15T19:50:23Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:image.openshift.io/triggers': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:annotations':
                .: {}
                'f:openshift.io/generated-by': {}
              'f:labels':
                .: {}
                'f:deployment': {}
            'f:spec':
              'f:containers':
                'k:{"name":"extrasistemodoo"}':
                  .: {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports': {}
                  'f:resources': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2025-01-15T19:51:05Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"extrasistemodoo"}':
                  'f:image': {}
    - manager: kubectl-set
      operation: Update
      apiVersion: apps/v1
      time: '2025-01-15T19:52:01Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"extrasistemodoo"}':
                  'f:env':
                    .: {}
                    'k:{"name":"WEBHOOKSECRETKEY"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:secretKeyRef': {}
    - manager: Mozilla
      operation: Update
      apiVersion: apps/v1
      time: '2025-01-15T20:01:46Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"extrasistemodoo"}':
                  'f:env':
                    'k:{"name":"HOST"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                    'k:{"name":"ODOO_API_KEY"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                    'k:{"name":"ODOO_DB"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                    'k:{"name":"ODOO_URL"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                    'k:{"name":"OPENAI_API_KEY"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                    'k:{"name":"OPENAI_ORG"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                    'k:{"name":"PORT"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
    - manager: kubectl-edit
      operation: Update
      apiVersion: apps/v1
      time: '2025-01-15T20:04:07Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"extrasistemodoo"}':
                  'f:ports':
                    'k:{"containerPort":5000,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
    - manager: kubectl-rollout
      operation: Update
      apiVersion: apps/v1
      time: '2025-01-15T20:05:17Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:metadata':
              'f:annotations':
                'f:kubectl.kubernetes.io/restartedAt': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2025-02-19T18:56:59Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
      subresource: status
  namespace: odoo
  labels:
    app: extrasistemodoo
    app.kubernetes.io/component: extrasistemodoo
    app.kubernetes.io/instance: extrasistemodoo
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: extrasistemodoo
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: extrasistemodoo
      annotations:
        kubectl.kubernetes.io/restartedAt: '2025-01-15T20:05:17Z'
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: extrasistemodoo
          image: 'image-registry.openshift-image-registry.svc:5000/odoo/extrasistemodoo@sha256:7282eca486e80e8c7a4f8f3ec1c01977d267d6a6005398b2cc0be67e75e27c60'
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 12
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2025-01-15T20:05:19Z'
      lastTransitionTime: '2025-01-15T19:50:23Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "extrasistemodoo-78dd8c9fd5" has successfully progressed.
    - type: Available
      status: 'True'
      lastUpdateTime: '2025-02-19T18:56:59Z'
      lastTransitionTime: '2025-02-19T18:56:59Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
