k8s/service-extrasistemodoo.yaml
kind: Service
apiVersion: v1
metadata:
  name: extrasistemodoo
  namespace: odoo
  uid: f95c9cf5-417f-4fa1-9be1-6357fc5b2971
  resourceVersion: '36071516'
  creationTimestamp: '2025-01-15T19:50:23Z'
  labels:
    app: extrasistemodoo
    app.kubernetes.io/component: extrasistemodoo
    app.kubernetes.io/instance: extrasistemodoo
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: v1
      time: '2025-01-15T19:50:23Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
    - manager: kubectl-edit
      operation: Update
      apiVersion: v1
      time: '2025-01-15T20:04:45Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:ports':
            'k:{"port":5000,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
spec:
  clusterIP: 172.30.228.235
  ipFamilies:
    - IPv4
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.228.235
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: extrasistemodoo
status:
  loadBalancer: {}
