k8s/route-extrasistemodoo.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: extrasistemodoo
  namespace: odoo
  uid: db21ae8c-e8b5-451c-9451-425196fdd3dc
  resourceVersion: '36071793'
  creationTimestamp: '2025-01-15T20:05:47Z'
  labels:
    app: extrasistemodoo
    app.kubernetes.io/component: extrasistemodoo
    app.kubernetes.io/instance: extrasistemodoo
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2025-01-15T20:05:47Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2025-01-15T20:05:47Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
spec:
  host: extrasistemodoo-odoo.apps.focus-ocp-sno.datco.net
  to:
    kind: Service
    name: extrasistemodoo
    weight: 100
  port:
    targetPort: 5000-tcp
  wildcardPolicy: None
status:
  ingress:
    - host: extrasistemodoo-odoo.apps.focus-ocp-sno.datco.net
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2025-01-15T20:05:47Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.focus-ocp-sno.datco.net
